# mynixos

./: .gitattributes  .gitignore  CLAUDE.md  MIGRATION_PLAN.md  README.md  SUNSHINE_MULTI_RESOLUTION_PLAN.md  configuration.nix  flake.nix  kdblight  parameters.nix  script
colmena/: flake.nix
docker/: cmd.txt  docker-compose.comfyui.yaml  mycomfy.Dockerfile
dotfiles/: assume_unchanged.py  copy_files.py  dotfiles.nix  fresshrss_user_css.css  pystartuprc.py
hardware-configurations/: rpi4b.nix  t495.nix  vbox.nix  xps13.nix
i3/: config
i3status/: config
machines/: raspberrypi4b.nix  rpi4b.nix  t495.nix  vbox.nix  xps.nix  xps13.nix
nix-on-droid/: flake.nix  home.nix  nix-on-droid.nix
nixconfig/: anki.nix  common.nix  dotfiles.nix  firefox.nix  gramps.nix  home-gui.nix  home-manager.nix  home.nix  hooks.nix  kde.nix  kuelap.nix  laptop.nix  mediakeys.nix  netbird.nix  open-webui.nix  packages.nix  plasma.nix  plasma_old.nix  plasma_rc2nix.nix  powersave.nix  pyenv.nix  sound.nix  system.nix  xwindows.nix
nixconfig/poetry/: pyproject.toml
nixconfig/poetry/flake/: flake.nix  pyproject.toml
patches/: 0001-add-vulkan-loader-to-LD_LIBRARY_PATH-to-enable-vulka.patch  394621-spliit.patch  414234.patch  423867.patch  441841.patch  441841_comfyui.patch  499090-devenv.patch  chromium_vulkan_loader.patch  cpufreq.patch  gnugrep-skip-gnulib-tests-clang.patch  immich_244803.patch  kleinanzeigen-detect.patch  nextcloud_388757.patch  paperless.patch  rss-bridge-4820.patch  rss-bridge-4821.patch  super-productivity.patch  super_productivity.patch  yaak_384648.patch
(+354 files in other folders)
