[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["Robert Elles"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pandas = "^1.5.2"
jupyter = "^1.0.0"
matplotlib = "^3.6.2"
beautifulsoup4 = "^4.11.1"
setuptools = "^65.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
