[tool.poetry]
name = "sepiabrown"
version = "0.1.0"
description = ""
authors = ["Suwon Park"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "*"
beautifulsoup4 = "*"
jupyter = "*"
notebook = "6.4.2" # nixos-22.11
pandas = "*"
numpy = "*"
matplotlib = "*"
pykson = "*"
ebooklib = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"